--- a/index.html
+++ b/index.html
@@ -1,115 +1,154 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>FLAMES Game</title>
-	<style>
-		body {
-			font-family: Arial, sans-serif;
-			background-color: #f2f2f2;
-			padding: 20px;
-		}
+	<title>love Rituals</title>
+	
+    <style>
+        body {
+	background-color: #ff00b7;
+	font-family: sans-serif;
+}
 
-		h1 {
-			text-align: center;
-			color: #333;
-		}
+h1 {
+	text-align: center;
+}
 
-		form {
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			background-color: #fff;
-			padding: 20px;
-			border-radius: 10px;
-			box-shadow: 0 0 10px rgba(0,0,0,0.2);
-			margin: 20px auto;
-			max-width: 600px;
-		}
+label {
+	display: inline-block;
+	margin-top: 10px;
+	margin-bottom: 5px;
+}
 
-		input {
-			padding: 10px;
-			margin: 10px;
-			border-radius: 5px;
-			border: none;
-			box-shadow: 0 0 5px rgba(0,0,0,0.2);
-		}
+input[type="text"] {
+	padding: 8px;
+	font-size: 16px;
+	border: none;
+	border-radius: 4px;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
 
-		button {
-			padding: 10px;
-			margin: 10px;
-			border-radius: 5px;
-			border: none;
-			background-color: #333;
-			color: #fff;
-			cursor: pointer;
-			transition: background-color 0.3s ease;
-		}
+button {
+	display: block;
+	margin: 20px auto;
+	padding: 10px 20px;
+	font-size: 18px;
+	background-color: #4CAF50;
+	color: #fff;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+}
 
-		button:hover {
-			background-color: #555;
-		}
+button:hover {
+	background-color: #3e8e41;
+}
 
-		p {
-			margin-top: 20px;
-			font-size: 18px;
-			font-weight: bold;
-			text-align: center;
-			color: #333;
-			text-transform: capitalize;
-		}
-	</style>
+p#result {
+	text-align: center;
+	font-size: 24px;
+	font-weight: bold;
+	margin-top: 30px;
+}
+
+    </style>
 </head>
 <body>
-	<h1>FLAMES Game</h1>
-	<form>
-		<label for="name1">Enter the first name:</label>
-		<input type="text" id="name1" name="name1" required>
-		<label for="name2">Enter the second name:</label>
-		<input type="text" id="name2" name="name2" required>
-		<button type="button" onclick="play()">Play</button>
-	</form>
+	<h1 >Flames Game</h1>
+	<label for="your-name">Your Name:</label>
+	<input type="text" id="your-name" required>
+	<br>
+	<label for="partner-name">Your Partner's Name:</label>
+	<input type="text" id="partner-name" required>
+	<br>
+	<button onclick="calculate()">Calculate </button>
 	<p id="result"></p>
+    <script>
+		function calculateLove() {
+			var name1 = document.getElementById("name1").value;
+			var name2 = document.getElementById("name2").value;
+			var loveScore = Math.floor(Math.random() * 100) + 1;
+			var loveText = name1 + " and " + name2 + " are " + loveScore + "% compatible! ❤️";
+			document.getElementById("loveResult").innerHTML = loveText;
+		}
+	</script>
+
+    <h1>Love Meter</h1>
+	<label for="name1">Your Name:</label>
+	<input type="text" id="name1">
+	<label for="name2">Your Partner's Name:</label>
+	<input type="text" id="name2">
+	<button onclick="calculateLove()">Calculate Love</button>
+	<p id="loveResult"></p>
 
 	<script>
-		function flames(name1, name2) {
-		    name1 = name1.toLowerCase();
-		    name2 = name2.toLowerCase();
+        function calculate() {
+	// Get the player's name
+	var yourName = document.getElementById("your-name").value;
+	// Get the partner's name
+	var partnerName = document.getElementById("partner-name").value;
 
-		    // Remove common characters
-		    for (char of name1) {
-		        if (name2.includes(char)) {
-		            name1 = name1.replace(char, '');
-		            name2 = name2.replace(char, '');
-		        }
-		    }
+	// Remove spaces and convert to lowercase
+	var yourNameLowerCase = yourName.replace(/\s+/g, '').toLowerCase();
+	var partnerNameLowerCase = partnerName.replace(/\s+/g, '').toLowerCase();
 
-		    // Calculate the length of the remaining letters
-		    const count = name1.length + name2.length;
+	// Find the length of the names
+	var yourNameLength = yourNameLowerCase.length;
+	var partnerNameLength = partnerNameLowerCase.length;
 
-		    // Determine the relationship based on the FLAMES acronym
-		    let result = '';
-		    let flames = ['Friends', 'Love', 'Affection', 'Marriage', 'Enemy', 'Sister'];
-		    while (flames.length > 1) {
-		        let index = (count % flames.length) - 1;
-		        if (index >= 0) {
-		            flames = flames.slice(index + 1).concat(flames.slice(0, index));
-		        } else {
-		            flames = flames.slice(0, -1);
-		        }
-		    }
-		    result = flames[0];
-
-		    return result;
+	// Compare each letter of the names and remove common letters
+	for (var i = 0; i < yourNameLength; i++) {
+		for (var j = 0; j < partnerNameLength; j++) {
+			if (yourNameLowerCase[i] == partnerNameLowerCase[j]) {
+				yourNameLowerCase = yourNameLowerCase.replace(yourNameLowerCase[i], '');
+				partnerNameLowerCase = partnerNameLowerCase.replace(partnerNameLowerCase[j], '');
+				yourNameLength--;
+				partnerNameLength--;
+			}
 		}
+	}
 
-		function play() {
-			const name1 = document.getElementById('name1').value;
-			const name2 = document.getElementById('name2').value;
-            
-			const result = flames(name1, name2);
-            const resultElement = document.getElementById('result');
-            resultElement.textContent = `${name1} and ${name2} are ${result}`;
-        }
-	</script>
+	// Calculate the Flames result
+	var flames = "FLAMES";
+	var flamesLength = flames.length;
+	var count = yourNameLength + partnerNameLength;
+	for (var i = 0; i < flamesLength - 1; i++) {
+		var index = count % (flamesLength - i);
+		if (index == 0) {
+			index = flamesLength - i - 1;
+		} else {
+			index--;
+		}
+		flames = flames.substring(0, index) + flames.substring(index + 1);
+	}
+	
+	// Display the result
+	var resultText = "";
+	switch (flames) {
+		case "F":
+			resultText = "You are just friends.";
+			break;
+		case "L":
+			resultText = "There could be something more.";
+			break;
+		case "A":
+			resultText = "You are attracted to each other.";
+			break;
+		case "M":
+			resultText = "You will get married!";
+			break;
+		case "E":
+			resultText = "You are meant to be together forever.";
+			break;
+		case "S":
+			resultText = "You are sworn enemies!";
+			break;
+		default:
+			resultText = "Invalid input.";
+			break;
+	}
+	document.getElementById("result").innerHTML = resultText;
+}
+
+    </script>
 </body>
 </html>
